--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-MONGO = mongodb+srv://nat933:UgmXYgOYTTwVqrqg@cluster0.2wlk8aj.mongodb.net/?retryWrites=true&w=majority
+MONGO = mongodb+srv://nat933:g3IFkbbWHlXgUDzo@cluster0.2wlk8aj.mongodb.net/?retryWrites=true&w=majority
