--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "eslint-config-next": "13.4.12",
     "mongoose": "^6.11.1",
     "next": "^14.0.1",
+    "next-auth": "^4.24.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
     "swr": "^2.2.4"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.34"
   }
 }
