--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ GOOGLE_CLIENT_ID=474194617194-2j94cb10vs3l03jik5gpeu6behth0csb.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_SECRET="0I097TFHJjkoiihoho"
+NEXTAUTH_URL="http://localhost:3000"
