maj  next-auth 4.24.5

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGO = mongodb+srv://nat933:g3IFkbbWHlXgUDzo@cluster0.2wlk8aj.mongodb.net/?retryWrites=true&w=majority
 
-GOOGLE_CLIENT_ID=474194617194-2j94cb10vs3l03jik5gpeu6behth0csb.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID = 474194617194-2j94cb10vs3l03jik5gpeu6behth0csb.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
 
-NEXTAUTH_SECRET="0I097TFHJjkoiihoho"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET = "0I097TFHJjkoiihoho"
+NEXTAUTH_URL = "http://localhost:3000"
