--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ GOOGLE_CLIENT_SECRET = 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
 
 NEXTAUTH_SECRET = "0I097TFHJjkoiihoho"
 NEXTAUTH_URL = "http://localhost:3000"
+
+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
