creation : page connection google /page d'inscription

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ GOOGLE_CLIENT_SECRET = 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
 NEXTAUTH_SECRET = "0I097TFHJjkoiihoho"
 NEXTAUTH_URL = "http://localhost:3000"
 
-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
+//openAI_APIkey  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
