--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.6.4",
     "mongoose": "^6.11.1",
     "next": "^13.4.3",
     "next-auth": "^4.22.1",
