--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "github-markdown-css": "^5.5.1",
+    "mongodb": "^6.15.0",
     "mongoose": "^6.11.1",
     "next": "^13.4.3",
     "next-auth": "^4.22.1",
