--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "22": "^0.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -18,11 +19,11 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "^15.2.4",
     "github-markdown-css": "^5.5.1",
     "mongodb": "^6.15.0",
     "mongoose": "^6.11.1",
-    "next": "^13.4.3",
+    "next": "^15.2.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
