--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.3.2",
+    "@shadcn/ui": "^0.0.4",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "^15.2.4",
     "github-markdown-css": "^5.5.1",
+    "lucide-react": "^0.487.0",
     "mongodb": "^6.15.0",
     "mongoose": "^6.11.1",
     "next": "^15.2.4",
